<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency Room</string>
    <string name="emergency_room">Search Patient Health Card</string>
    <string name="action_settings">Settings</string>
    <string name="card_search">Enter Health Card number</string>
    <string name="submit_search">Search</string>
    <string name="title_activity_health_card">Health Card</string>
    <string name="health_card_header">Health Card Search Result:</string>
    <string name="healthCard"></string>
    <string name="checkIn">Check in</string>
    <string name="title_activity_vital_update">Update Vitals</string>
    <string name="update_vitals_intro">Enter Vitals Below:</string>
    <string name="enter_temp">Enter Temperature</string>
    <string name="enter_systolic">Enter Systolic Blood Pressure</string>
    <string name="enter_diastolic">Enter Diastolic Blood Pressure</string>
    <string name="enter_heartrate">Enter Heart Rate</string>
    <string name="enter_time">Enter Time (23:59) </string>
    <string name="submit_changes">Submit</string>
    <string name="title_activity_hcrecords">Records</string>
    <string name="getRecords">Records</string>
    <string name="updateVitals">Update Vitals</string>
    <string name="writePrescrip">Write Prescription</string>
    <string name="Records"></string>
    <string name="title_activity_vitals_update_success">Successfully updated</string>
    <string name="updatesuccess">Updated successfully!</string>
    <string name="SaveUpdates">Save Updates</string>
    <string name="backPatient">Back to Patient</string>
    <string name="backSearch">Lookup a Health Card</string>
    <string name="title_activity_checked_in">Checked in</string>
    <string name="checkedIn">Checked in successfully!</string>
    <string name="checkInTime"></string>
    <string name="ifChecked"></string>
    <string name="title_activity_add_patient">Add Patient</string>
    <string name="add_patient">Add Patient</string>
    <string name="addhcn">Patient Health Card Number</string>
    <string name="addname">Patient Name</string>
    <string name="addyear">Year</string>
    <string name="addmonth">Month</string>
    <string name="addday">Day</string>
    <string name="add_thispatient">Add Patient</string>
    <string name="title_activity_write_prescription">Write Prescription</string>
    <string name="prescrip_name">Prescription Name</string>
    <string name="prescrip_descript">Prescription Description</string>
    <string name="urgency"></string>
	<string name="backCard">Back</string>
	<string name="backLogIn">Logout</string>
	
	<string name="sortPatients">List Urgent Patients</string>
	<string name="sortedPatients">Urgent Patients</string>
	<string name="title_activity_sort_patients">Sorted Patients</string>
	<string name="sorted"></string>
    
    <string name="seen_by_doctor">Seen By Doctor</string>
    <string name="title_activity_seen_doctor">Seen Doctor</string>
    <string name="hello_world">Hello world!</string>
    <string name ="dateseen">Date Seen</string>
    <string name ="timeseen">Time Seen</string>
	<string name ="timeseenbydoctor">Time Seen By Doctor:</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="title_activity_log_in_screen">Welcome to Emergency Room</string>
    <string name="title_activity_search">Health Card Search</string>


</resources>
