<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="g0220.emergencyroom.HealthCardActivity"
    android:orientation = "vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/health_card_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.38"
        android:gravity="center_horizontal|center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/healthCard"
            android:layout_width="375dp"
            android:layout_height="30dp"
            android:layout_weight="0.01"
            android:gravity="center_horizontal|center"
            android:text="@string/healthCard" />

        <TextView
            android:id="@+id/seendoctorresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:gravity="top|center"
            android:text="@string/timeseenbydoctor" />
        
        <TextView
            android:id="@+id/urgency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:gravity="top|center"
            android:text="@string/urgency" />

        <Button
            android:id="@+id/checkIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkIn"
            android:text="@string/checkIn" />

        <Button
            android:id="@+id/seenByDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="seenByDoctor"
            android:text="@string/seen_by_doctor" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getRecords"
            android:text="@string/getRecords" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="updateVitals"
            android:text="@string/updateVitals" />

        <Button
            android:id="@+id/addPrescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addPrescrip"
            android:text="@string/writePrescrip" />
        
        <Button
	        android:id="@+id/backSearch"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="searchBack"
	        android:text="@string/backSearch" />
    </LinearLayout>

</LinearLayout>
