<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="g0220.emergencyroom.Search" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/emergency_room" />
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal" >
 		
	    <EditText
	        android:id="@+id/card_search"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:hint="@string/card_search"
	        android:textSize="15sp" />

	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:onClick="searchHC"
	        android:text="@string/submit_search" />
        
	</LinearLayout>

    <Button
        android:id="@+id/add_patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_patient"     
        android:onClick="addPatient"
        android:textSize="25sp" />
    
    <Button
        android:id="@+id/sortPatients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sortPatients"     
        android:onClick="sortPatients"
        android:textSize="23sp" />
    
     <Button
        android:id="@+id/backLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backLogIn"     
        android:onClick="backLogin"
        android:textSize="23sp" />

</LinearLayout>
