<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="g0220.emergencyroom.VitalUpdateActivity" 
    android:orientation = "vertical" >

    <EditText
        android:id="@+id/enter_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_temp"
        android:inputType="number|numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/enter_heartrate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_heartrate"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/enter_systolic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_systolic"
        android:inputType="number|numberDecimal" />
    
    <EditText
        android:id="@+id/enter_diastolic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_diastolic"
        android:inputType="number|numberDecimal" />
    
    <EditText
        android:id="@+id/enter_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_time"
        android:inputType="time" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="update"
        android:text="@string/SaveUpdates" />

</LinearLayout>