<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="g0220.emergencyroom.AddPatient" >

    <EditText
        android:id="@+id/addhcn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addname"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/addhcn"
        android:inputType="number" />

    <EditText
        android:id="@+id/addmonth"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/addday"
        android:layout_alignBottom="@+id/addday"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/addmonth"
        android:inputType="date" />

    <EditText
        android:id="@+id/addyear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/addmonth"
        android:layout_alignBottom="@+id/addmonth"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/addmonth"
        android:ems="10"
        android:hint="@string/addyear"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/addname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addhcn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/addname" />

    <EditText
        android:id="@+id/addday"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/addname"
        android:layout_marginRight="17dp"
        android:layout_marginTop="63dp"
        android:layout_toLeftOf="@+id/addmonth"
        android:ems="10"
        android:hint="@string/addday"
        android:inputType="date" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:onClick="add_patient"
        android:text="@string/add_thispatient" />

    <TextView
        android:id="@+id/seendoctorresult"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_above="@+id/addmonth"
        android:layout_alignLeft="@+id/button1"
        android:text="Date Of Birth:"
        android:textSize="20dp" />

</RelativeLayout>
