<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="g0220.emergencyroom.WritePrescriptionActivity" >

    <EditText
        android:id="@+id/prescrip_name"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:ems="10"
        android:hint="@string/prescrip_name" >
    </EditText>



    <EditText
        android:id="@+id/prescrip_descript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prescrip_descript"
        android:inputType="textMultiLine" >

        
    </EditText>
    <Button
        android:id="@+id/submit_prescrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addPrescrip"
        android:text="@string/submit_changes" />

</TableLayout>