<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="g0220.emergencyroom.CheckedIn"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkedIn"
        android:gravity="center" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.38"
        android:gravity="center_horizontal|center"
        android:orientation="vertical" >
    
	    <TextView
	       	android:id="@+id/checkInTime"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:text="@string/checkInTime"
	        android:gravity="center" />
    
    </LinearLayout>
    
    <Button
	        android:id="@+id/backCard"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="backCard"
	        android:text="@string/backCard" />
    
</LinearLayout>
