<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="g0220.emergencyroom.VitalsUpdateSuccess"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/updatesuccess" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.38"
        android:gravity="center_horizontal|center"
        android:orientation="vertical" >
	    
	    <Button
	        android:id="@+id/backSearch"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="searchBack"
	        android:text="@string/backSearch" />
	    
	      <Button
	        android:id="@+id/backCard"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="backCard"
	        android:text="@string/backCard" />

	    </LinearLayout>
</LinearLayout>
